Last minute change, moved descripts.

--- a/html/updates.html
+++ b/html/updates.html
@@ -20,11 +20,15 @@
         </div>
         <div class="schema">
             <div class="row" style="align-items: center;">
-                <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
-                <h1>// Updates</h1>
-                <a id="#top" href="/sketchbook/index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                <div class="column" style="flex: 10%;">
+                    <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
+                </div>
+                <div class="column" style="flex: 85%;">
+                    <h1>// Updates</h1>
+                    <p>|@| Notes for site and project updates.</p>
+                    <a id="#top" href="index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                </div>
             </div>
-            <p>Notes for site and project updates.</p>
             <div class="row">
                 <div class="column">
                     <!-- 
@@ -66,6 +70,7 @@
                             <li>Standardized colors with variables, in SCHEMA.css (that comment from 1.14f didn't go unnoticed).</li>
                             <li>Added colored vertical decorators.</li>
                             <li>Minor fixes, mainly syntax.</li>
+                            <li>Changed layout and placement of page description text to be under header.</li>
                         </ul>
                         <p>Future updates will be list format when sections are multi-item.</p>
                     </div>
