--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
         <!-- Dear children who found my portfolio, stop being the wannabe hacker that you are, looking at the page source to feel smart. -->
         <div class="schema">
             <div class="row" style="align-items: center;">
-                <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
-                <h1>// Dreamer's Legacy</h1>
-                <a id="#top" href="index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                <div class="column" style="flex: 10%;">
+                    <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
+                </div>
+                <div class="column" style="flex: 85%;">
+                    <h1>// Dreamer's Legacy</h1>
+                    <p>|@| Project repository and portfolio.</p>
+                    <a id="#top" href="index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                </div>
             </div>
-            <p>Project repository and portfolio.</p>
             <div class="row">
                 <div class="column">
                     <div class="card">
