--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -33,9 +33,14 @@
         </div>
         <div class="schema">
             <div class="row" style="align-items: center;">
-                <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
-                <h1>// Sketchbook</h1>
-                <a id="#top" href="/sketchbook/index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                <div class="column" style="flex: 10%;">
+                    <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
+                </div>
+                <div class="column" style="flex: 85%;">
+                    <h1>// Sketchbook</h1>
+                    <p>|@| Discarded manuscripts and Markdown text.</p>
+                    <a id="#top" href="index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                </div>
             </div>
             <div style="display: flex; justify-content: center; align-items: center; padding-top: 5%; padding-bottom: 5%;"> <!-- it took me 3 minutes, yes, but add it to the main stylesheets someday, it seems useful elsewhere -->
                 <div style="border: 0.1rem solid var(--outline-color); padding-left: 30%; padding-right: 30%; padding-top: 1%; padding-bottom: 1%;">
