--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -12,8 +12,17 @@
         <link rel="icon" href="/resources/favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
     </head>
+    <style>
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
     <script src="/js/auto-fill-year-func.min.js"></script>
-    <body onload="autoFillYear();" class="fade-in">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" referrerpolicy="noreferrer"></script>
+    <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js" referrerpolicy="noreferrer"></script>
+    <script src="/js/markdown-render.min.js"></script>
+    <body onload="autoFillYear();buildPage();" class="fade-in">
         <!--
         TELL ME.
         0█0█0███ 0██0█000 0██00█0█ 0██0███0 00█00000 0████00█ 0██00█0█ 0███00██ 
@@ -42,11 +51,8 @@
                     <a id="#top" href="index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
                 </div>
             </div>
-            <div style="display: flex; justify-content: center; align-items: center; padding-top: 5%; padding-bottom: 5%;"> <!-- it took me 3 minutes, yes, but add it to the main stylesheets someday, it seems useful elsewhere -->
-                <div style="border: 0.1rem solid var(--outline-color); padding-left: 30%; padding-right: 30%; padding-top: 1%; padding-bottom: 1%;">
-                    <p>|!| There is nothing here. Turn back.</p>
-                </div>
-            </div>    
+            <div id="error"></div>
+            <div id="sketchbook"></div>
         </div>
         <p class="footer-text" id="year-footer-text"></p>
         <script src="/js/collapse.min.js"></script>
