--- a/html/updates.html
+++ b/html/updates.html
@@ -55,6 +55,75 @@
                         </div>
                     </div>
                     <div class="card">
+                        <h2>Update 1.16</h2>
+                        <p>Project Update + Site Update, June 7th, 2021</p>
+                        <h3>All (*) Projects</h3>
+                        <p>If applicable, changed SVG project icon positioning.</p>
+                        <h3>TWCS</h3>
+                        <ul>
+                            <li>Added to project listing.</li>
+                            <li>Started development May 31st, 2021.</li>
+                        </ul>
+                        <h3>ARBITER</h3>
+                        <ul>
+                            <li>Added to project listing.</li>
+                            <li>Started development April 15th, 2021.</li>
+                        </ul>
+                        <h3>FORESIGHT</h3>
+                        <ul>
+                            <li>Added to project listing.</li>
+                            <li>Started development April 24th, 2021.</li>
+                        </ul>
+                        <h3>SWBS</h3>
+                        <p>(Since update 1.14f...)</p>
+                        <ul>
+                            <li>Updated from 1.2.4 -> 1.2.5, implemented exposed ClientManager class instances while in threading.</li>
+                            <li>Updated from 1.2.5 -> 1.2.5a0, hotfix for stray recursive import statement.</li>
+                            <li>Updated from 1.2.5a0 -> 1.2.5b2, PEP compliance (again), type specification in docstrings, bug fix in Server.listen function.</li>
+                            <li>Updated from 1.2.5b2 -> 1.2.6, version bump out of beta.</li>
+                            <li>Updated from 1.2.6 -> 1.2.6.1 (latest), fixed build issue.</li>
+                            <li>Changed documentation theme and build script, now using custom gruvbox-sphinx HTML theme.</li>
+                        </ul>
+                        <h3>Bandage</h3>
+                        <p>(Since update 1.14d...)</p>
+                        <ul>
+                            <li>Updated from 1.0 -> 1.1, PEP compliance, fixed uses of <code>path.splitext</code> function.</li>
+                            <li>Updated from 1.1 -> 1.2 (latest), PEP compliance (again), fixed syntax for a conditional.</li>
+                            <li>Changed documentation theme and build script, now using custom gruvbox-sphinx HTML theme.</li>
+                        </ul>
+                        <h3>Project KINETIC</h3>
+                        <p>(Since update 1.14f...)</p>
+                        <ul>
+                            <li>Updated from 1.0.1 -> 1.0.2, (actual) PEP compliance, added to default <code>kinetic.Agent</code> commands to lookup.</li>
+                            <li>Updated from 1.0.2 -> 1.0.3, PEP compliance (again) for <code>kinetic.generate</code>, minor fixes.</li>
+                            <li>Changed documentation theme and build script, now using custom gruvbox-sphinx HTML theme.</li>
+                        </ul>
+                        <h3>gruvbox-sphinx</h3>
+                        <ul>
+                            <li>Added to project listing.</li>
+                            <li>Started development June 5th, 2021.</li>
+                        </ul>
+                        <h3>deargodpleaseno</h3>
+                        <ul>
+                            <li>Removed artifacts from when the documentation was written in plain HTML.</li>
+                            <li>Changed documentation theme and build script, now using custom gruvbox-sphinx HTML theme.</li>
+                        </ul>
+                        <h3>Sketchbook</h3>
+                        <p>Added sketchbook content.</p>
+                        <h3>Site Updates</h3>
+                        <ul>
+                            <li>Moved to using a single error page, with JavaScript to get status code and to display error information.</li>
+                            <li>Deprecated error.css for SCHEMA.css. <span class="hint">You did well, child, you may rest in the project Git log now.</span></li>
+                            <li>Added and implemented additional color variables to SCHEMA.css from Gruvbox's color scheme.</li>
+                            <li>Removed unused font import statement for JetBrains Mono from SCHEMA.css.</li>
+                            <li>Changed usages of <code>px</code> unit to <code>em</code> or <code>%</code>.</li>
+                            <li>Added stylesheet definitions for <code>&lt;input&gt;</code> and <code>&lt;textarea&gt;</code> tags to SCHEMA.css.</li>
+                            <li>Added horizontal decorators to SCHEMA.css.</li>
+                            <li>Changed row/column <code>&lt;div&gt;</code>s formatting to be loose, project cards no longer stretch with the other column.</li>
+                            <li>Removed two dead and abandoned projects.</li>
+                        </ul>
+                    </div>
+                    <div class="card">
                         <h2>Update 1.15a</h2>
                         <p>Project Update + Site Update, May 13th, 2021</p>
                         <h3>Sketchbook</h3>
