Silent error document fix.

--- a/html/error.html
+++ b/html/error.html
@@ -16,7 +16,10 @@
             <p id="message"></p>
             <noscript>An unspecified error occurred.</noscript>
             <p>If issue persists, please open an issue on the Github repository, or email skynetserver.god@protonmail.com.</p>
-            <a class="button" href="/index.html">Return Home</a><a class="button" style="color: var(--orange);" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank" referrerpolicy="noreferrer">Open Issue</a>
+            <div class="button-container">
+                <a class="button" href="/index.html">Return Home</a>
+                <a class="button" style="color: var(--orange);" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank" referrerpolicy="noreferrer">Open Issue</a>
+            </div>
         </div>
         <p class="footer-text" id="year-footer-text"></p>
         <script src="/js/auto-fill-year.min.js"></script>
