--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                             <p>Current runtime; about 2 years (development started December 1st, 2018), through multiple design iterations.</p>
                             <p>The source code and assets for this portfolio is available <a rel="noreferrer" href="https://github.com/perpetualCreations/dreamerslegacy-site" target="_blank">on Github.</a> The old repository was privated after sensitive information was found to have been leaked into commits spanning over several months. Before being closed it had 65 commits, and was started on November 29th, 2019. Repository migration completed on December 3rd, 2020.</p>
                             <hr>
+                            <a class="button" href="/html/privacy.html">(i) Privacy Policy and Terms and Conditions</a>
                         </div>
                     </div>
                     <div class="card">
