--- a/html/privacy.html
+++ b/html/privacy.html
@@ -43,7 +43,8 @@
                 <h3>JavaScript Libraries</h3>
                 <p>Some documents require third-party JavaScript libraries, to function, and are listed below with their URL source and reasoning for implementation.</p>
                 <ul>
-                    <li>Nunjucks, loaded from <a href="https://mozilla.github.io/nunjucks/files/nunjucks.min.js" referrerpolicy="noreferrer">https://mozilla.github.io/nunjucks/files/nunjucks.min.js</a>, for translating sketchbook content from Markdown source documents to HTML.</li>
+                    <li>Marked, loaded from <a href="https://cdn.jsdelivr.net/npm/marked/marked.min.js" referrerpolicy="noreferrer">https://cdn.jsdelivr.net/npm/marked/marked.min.js</a>, for translating sketchbook content from Markdown source documents to HTML.</li>
+                    <li>Nunjucks, loaded from <a href="https://mozilla.github.io/nunjucks/files/nunjucks.min.js" referrerpolicy="noreferrer">https://mozilla.github.io/nunjucks/files/nunjucks.min.js</a>, for templating sketchbook content into proper formatting.</li>
                     <li>Github Calendar, loaded from <a href="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js" referrerpolicy="noreferrer">https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js</a>, for functionality of the Github commit calendar.</li>
                 </ul>
                 <h3>Stylesheet Resources</h3>
