--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -19,6 +19,7 @@
         }
     </style>
     <script src="/js/auto-fill-year-func.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" referrerpolicy="noreferrer"></script>
     <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js" referrerpolicy="noreferrer"></script>
     <script src="/js/markdown-render.min.js"></script>
     <body onload="autoFillYear();buildPage();" class="fade-in">
