commit message here.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                     <div class="card">
                         <img src="/resources/avatars/pc.webp" class="avatar" alt="Avatar Image for perpetualCreations">
                         <h3>T. Chen</h3>
+                        <p class="hint">Alias <i>Abraham Li & Sibyl</i>, Handlename <i>perpetualCreations</i></p>
                         <hr>
-                        <p>I maintain and contribute to this site. My handlename is perpetualCreations.</p>
+                        <p>I maintain and contribute to this site.</p>
                         <p>An engineering student who probably should've studied humanities instead, <a href="/sketchbook/index.html">amassing a sketchbook (more appropriately journal)</a> while off work.</p>
                         <p id="opinion-text"></p>
                         <h4>Contacts:</h4>
@@ -106,7 +107,7 @@
                             <p>Loading... please wait warmly.</p>
                         </div>
                         <script src="/js/calendar.js"></script>
-                        <p style="font-size: 0.8em;">Down? Github probably changed how the calendar is rendered, again. It'll be a bit until the scraper is updated to handle the new changes.</p>
+                        <p class="hint">Down? Github probably changed how the calendar is rendered, again. It'll be a bit until the scraper is updated to handle the new changes.</p>
                         <hr>
                     </div>
                     <div class="card row">
@@ -194,7 +195,7 @@ sudo apt update
                         <hr>
                         <button class="collapsible">Project Contents</button>
                         <div class="content">
-                            <p>Project software is available on Github, please see documentation for further hardware specification and additional details. Access these pages below.</p>
+                            <p>Project software is available on Github, please see documentation for further  details. Access these pages below.</p>
                             <div class="button-container">
                                 <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/TWCS" target="_blank">Github</a>
                                 <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/TWCS/releases/" target="_blank">Software Download</a>
@@ -215,7 +216,7 @@ sudo apt update
                         <hr>
                         <button class="collapsible">Project Contents</button>
                         <div class="content">
-                            <p>Project software is available on Github, please see documentation for further hardware specification and additional details. Access these pages below.</p>
+                            <p>Project software is available on Github, please see documentation for further  details. Access these pages below.</p>
                             <div class="button-container">
                                 <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/ARBITER" target="_blank">Github</a>
                                 <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/ARBITER/releases/" target="_blank">Software Download</a>
@@ -235,10 +236,30 @@ sudo apt update
                         <hr>
                         <button class="collapsible">Project Contents</button>
                         <div class="content">
-                            <p>Project software is available on Github, please see documentation for further hardware specification and additional details. Access these pages below.</p>
+                            <p>Project software is available on Github, please see documentation for further  details. Access these pages below.</p>
                             <div class="button-container">
                                 <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/FORESIGHT" target="_blank">Github</a>
                                 <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/FORESIGHT/releases/" target="_blank">Software Download</a>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                    <div class="card">
+                        <h3>ORWELLIAN</h3>
+                        <p>Personnel timesheet tracker, built with the Flask web application framework. Sign-in with assignable QR codes, with data sent to a centralized SQLite database.</p>
+                        <hr>
+                        <button class="collapsible">Project Status</button>
+                        <div class="content">
+                            <p>Project was completed and released.</p> 
+                            <p>See Project Contents for documentation and product.</p>
+                        </div>
+                        <hr>
+                        <button class="collapsible">Project Contents</button>
+                        <div class="content">
+                            <p>Project software is available on Github, please see documentation for further details. Access these pages below.</p>
+                            <div class="button-container">
+                                <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/ORWELLIAN" target="_blank">Github</a>
+                                <a rel="noreferrer" class="button" href="https://github.com/perpetualCreations/ORWELLIAN/releases/" target="_blank">Software Download</a>
                             </div>
                         </div>
                         <hr>
