--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -8,10 +8,8 @@
         <meta name="author" content="perpetualCreations">
         <title>Raspbot Gallery</title>
         <link rel="preload" href="/css/schema.min.css" as="style">
-        <link rel="preload" href="/css/gallery.min.css" as="style">
         <link rel="icon" href="/resources/favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/gallery.min.css">
     </head>
     <body class = "fade-in"> 
         <!-- Maybe you should read the actual page instead of looking at HTML code and wrongly expanding your ego. -->
@@ -25,11 +23,11 @@
             </div>
             <hr>
             <div class="gallery">
-                <video width = "180px;" controls><source src = "/projects/raspbot/gallery/2021-03-06_20-58-37.mkv" type = "video/mp4"></video>
+                <video width = "180px;" controls><source src = "/projects/raspbot/gallery/2021-03-06_20-58-37-converted.mp4" type = "video/mp4"></video>
                 <div class = "caption">GUI client piloting. (2021)</div>
             </div>
             <div class="gallery">
-                <video width = "180px;" controls><source src = "/projects/raspbot/gallery/2021-03-06_21-00-30.mkv" type = "video/mp4"></video>
+                <video width = "180px;" controls><source src = "/projects/raspbot/gallery/2021-03-06_21-00-30-converted.mp4" type = "video/mp4"></video>
                 <div class = "caption">Longer GUI client piloting. (2021)</div>
             </div>
             <div class="gallery">
