hotfix for update page transparency... in bridge/title cards

--- a/html/updates.html
+++ b/html/updates.html
@@ -48,7 +48,7 @@
 
                     buy my roblox script injector at: roblox.script.injector.mm.my
                     -->
-                    <div class="card row">
+                    <div class="card row card-semi-transparent">
                         <div class="column" style="flex: 1%;">
                             <div class="deco-vertical" style="border-color: #fe8019;"></div>
                         </div>
@@ -623,7 +623,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card bridge-card">
+                    <div class="card bridge-card card-semi-transparent">
                         <a class="button" href="#top" style="margin-right: 1%;">Jump to Top</a>
                         <hr>
                         <p class="hint">hint: this scrolls with the page.</p>
